--- a/CH01_Render/ソースファイル/Win10用/Math/Math.vcxproj.filters
+++ b/CH01_Render/ソースファイル/Win10用/Math/Math.vcxproj.filters
@@ -18,8 +18,11 @@
     <ClCompile Include="..\..\..\..\..\DirectXTex-master\WICTextureLoader\WICTextureLoader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\3DCheckHit_2_1.cpp">
+    <ClCompile Include="..\..\..\..\CH06_3DPhysics\ソースファイル\3DPhysics_2_1.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="memo.txt" />
   </ItemGroup>
 </Project>
