--- a/CH01_Render/ソースファイル/Win10用/Math/Math.vcxproj.filters
+++ b/CH01_Render/ソースファイル/Win10用/Math/Math.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\DirectXTex-master\WICTextureLoader\WICTextureLoader.cpp">
+    <ClCompile Include="..\..\..\..\..\..\..\Desktop\DirectXTex-master\WICTextureLoader\WICTextureLoader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\CH06_3DPhysics\ソースファイル\3DPhysics_3_1.cpp">
+    <ClCompile Include="..\..\3DCheckHit_1_2.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
